internal/controller/testdata/postgresbranch/basic-single-node/consists_of/networkpolicy.yaml
---
action: createOrUpdate
matcher: Subset
object:
  apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: pg-mydb-feedab1ebeef
    namespace: myteam
    labels:
      postgres.nais.io/name: mydb
    ownerReferences:
      - apiVersion: nais.io/v1
        kind: PostgresBranch
        name: mydb
        uid: d3adb33f-beef-cafe-babe-700d1e100d1e
        controller: true
        blockOwnerDeletion: true
  spec:
    policyTypes:
      - Egress
      - Ingress
    podSelector:
      matchLabels:
        cnpg.io/cluster: pg-mydb
    egress:
      - to:
          - podSelector:
              matchLabels:
                cnpg.io/cluster: pg-mydb
      - to:
          - namespaceSelector: {}
            podSelector:
              matchLabels:
                k8s-app: kube-dns
      - to:
          - ipBlock:
              cidr: 172.16.0.2/32
